--- a/app/src/main/res/layout/activity_navigation_list_.xml
+++ b/app/src/main/res/layout/activity_navigation_list_.xml
@@ -1,66 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation_list_background"
+<android.support.constraint.ConstraintLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:id="@+id/navigation_list_background"
+tools:context=".Navigation.NavigationListActivity">
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Navigation.NavigationListActivity">
+    android:orientation="horizontal">
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:numColumns="2"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp"
+        android:id="@+id/navigation_recycler_view"
+        android:layout_above="@id/navigation_buttons_layout"
+        android:layout_marginBottom="5dp"
+        android:scrollbars="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/navigation_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/navigation_buttons_layout"
-            android:layout_marginBottom="5dp"
-            android:horizontalSpacing="5dp"
-            android:numColumns="2"
-            android:scrollbars="vertical"
-            android:verticalSpacing="5dp">
+    </android.support.v7.widget.RecyclerView>
 
-        </android.support.v7.widget.RecyclerView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:id="@+id/navigation_buttons_layout"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        >
 
-        <LinearLayout
-            android:id="@+id/navigation_buttons_layout"
+        <Button
+            android:id="@+id/navigation_button_delete"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:orientation="horizontal"
-            android:weightSum="3">
+            android:layout_weight="1"
+            android:text="@string/delete_contact"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/navigation_button_edit"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:text="Edytuj"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="@string/newL"
+            android:id="@+id/navigation_button_edit" />
 
-            <Button
-                android:id="@+id/navigation_button_add"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:text="@string/newL"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="PROWADZ"
+            android:id="@+id/navigation_button_call" />
+    </LinearLayout>
 
-            <Button
-                android:id="@+id/navigation_button_call"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:text="PROWADZ"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-    </RelativeLayout>
+</RelativeLayout>
 </android.support.constraint.ConstraintLayout>
